fix spacing

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ footer
     background-image: url("./assets/bean.png");
     background-size: 150px;
     background-repeat: repeat;
-    margin-top: 150px;
+    margin-top: 540px;
     padding: 50px 0;
 }
 
@@ -163,7 +163,6 @@ footer
 #image
 {
     width: 30%;
-    background-color: transparent;
 }
 
 @media only screen and (max-width: 560px)
